docs: в сваггер прописать  register и login user
